--- a/index.html
+++ b/index.html
@@ -2,4 +2,7 @@
 layout: home
 title: Diego Baptista
 subtitle: Welcome to my academic website!
+
+To know more about me please go to the "About me" section, at the upper right corner. 
+You can find some of my recent publications listed below. 
 ---
