--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 ---
 layout: home
 title: Diego Baptista
-subtitle: Welcome to my academic website!
-
-To know more about me please go to the "About me" section, at the upper right corner. 
-You can find some of my recent publications listed below. 
+subtitle: Welcome to my academic website! To know more about me please go to the "About me" section, at the upper right corner. You can find some of my recent publications listed below. 
 ---
