--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Diego Baptista Theuerkauf
-subtitle: Welcome to my academic website! To know more about me please go to the "About me" section, at the upper right corner. Next to it, there is some information about my Teaching experience, and my publications. You can find some of my recent ones listed below. 
+subtitle: Welcome to my academic website! To know more about me please go to the "About me" section, at the upper right corner. Next to it, there is some information about my "Teaching" experience, and my "Publications". You can find some of my recent ones listed below. 
 ---
